# hypnos-data

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
assets/css/: tables.css
data/processed/: Sleep_Efficiency_Processed.csv
dataset/: index.html
docs/: dataset.md  eda.md  index.md  modeling.md  preprocessing.md  results.md
eda/: index.html
modeling/: index.html
notebooks/: 01_analise_exploratoria.ipynb  02_comparacao_modelos.ipynb
preprocessing/: index.html
results/: index.html
search/: search_index.json
src/data/: utils.py
