[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Alan Goncalves <alandeogoncalves@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
streamlit = "^1.10.0"
seaborn = "^0.11.2"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pre-commit = "^2.20.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.9"
jupyterlab = "^3.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
